finish authorization
